# protegon

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  GameWorld.h  LICENSE  LICENSE.txt  Level.h  Matrix3D.cpp  Matrix3D.h  README.md  TODO.txt  Todo.txt  animation.txt  build.sh  protegon.pc.in  protegon.sln  protegon.vcxproj  protegon.vcxproj.filters  setup.py
demos/: CMakeLists.txt
demos/animation/: CMakeLists.txt
demos/animation/resources/: animation_scene.json
demos/animation/src/: Application.cpp  application.cpp
demos/audio/: CMakeLists.txt
demos/audio/src/: application.cpp
demos/basic_rectangle/: CMakeLists.txt
demos/basic_rectangle/src/: application.cpp
demos/binary_serialization/: CMakeLists.txt
demos/binary_serialization/src/: application.cpp
demos/blend_mode/: CMakeLists.txt
demos/blend_mode/src/: application.cpp
demos/bounce_effect/: CMakeLists.txt
demos/bounce_effect/src/: application.cpp
demos/broadphase/: CMakeLists.txt
demos/broadphase/src/: application.cpp
demos/button/: CMakeLists.txt
demos/button/src/: application.cpp
demos/button_group/: CMakeLists.txt
demos/button_group/src/: application.cpp
demos/camera/: CMakeLists.txt
demos/camera/src/: application.cpp
demos/camera_shake/: CMakeLists.txt
demos/camera_shake/src/: application.cpp
demos/chunk/: CMakeLists.txt
demos/chunk/src/: application.cpp
demos/collision/: CMakeLists.txt
demos/collision/src/: application.cpp
demos/component_hooks/: CMakeLists.txt
demos/component_hooks/src/: application.cpp
demos/core/: CMakeLists.txt
demos/core/script/: CMakeLists.txt
demos/core/serialization_json/: CMakeLists.txt
demos/core/serialization_script/: CMakeLists.txt
demos/demo1/: CMakeLists.txt
demos/demo1/src/: Application.cpp
demos/dropdown/: CMakeLists.txt
demos/dropdown/src/: application.cpp
demos/dynamic_collision/: CMakeLists.txt
demos/dynamic_collision/src/: Application.cpp
demos/ecs/: CMakeLists.txt
demos/ecs/src/: Application.cpp
demos/effect_bounce/: CMakeLists.txt
demos/effect_bounce/src/: application.cpp
demos/effect_fade/: CMakeLists.txt
demos/effect_fade/src/: application.cpp
demos/effect_follow/: CMakeLists.txt
demos/effect_follow/src/: application.cpp
demos/effect_rotate/: CMakeLists.txt
demos/effect_rotate/src/: application.cpp
demos/effect_scale/: CMakeLists.txt
demos/effect_scale/src/: application.cpp
demos/effect_shake/: CMakeLists.txt
demos/effect_shake/src/: application.cpp
demos/effect_tint/: CMakeLists.txt
demos/effect_tint/src/: application.cpp
demos/effect_translate/: CMakeLists.txt
demos/effect_translate/src/: application.cpp
demos/event/: CMakeLists.txt
demos/event/src/: Application.cpp  application.cpp
demos/fade_effect/: CMakeLists.txt
demos/fade_effect/src/: application.cpp
demos/fixed_collision/: CMakeLists.txt
demos/fixed_collision/src/: Application.cpp
demos/fluid/: CMakeLists.txt
demos/fluid/src/: application.cpp
demos/fullscreen/: CMakeLists.txt
demos/fullscreen/src/: application.cpp
demos/gmtk_jam_2022/: CMakeLists.txt
demos/gmtk_jam_2022/src/: Application.cpp
demos/gmtk_jam_2023/: CMakeLists.txt
demos/gmtk_jam_2023/src/: application.cpp
demos/graphics_object/: CMakeLists.txt
demos/interactive/: CMakeLists.txt
demos/json_serialization/: CMakeLists.txt
demos/light/: CMakeLists.txt
demos/noise/: CMakeLists.txt
demos/olc_jam_2022/: CMakeLists.txt
demos/overlap_collision/: CMakeLists.txt
demos/paint/: CMakeLists.txt
demos/parallax/: CMakeLists.txt
demos/particle/: CMakeLists.txt
demos/path_finding/: CMakeLists.txt
demos/pathfinding/: CMakeLists.txt
demos/physics/: CMakeLists.txt
demos/physics_bounds/: CMakeLists.txt
demos/physics_broadphase/: CMakeLists.txt
demos/platforming/: CMakeLists.txt
demos/player_top_down/: CMakeLists.txt
demos/plot/: CMakeLists.txt
demos/protegon/: CMakeLists.txt
demos/protegon/src/: common.h  (+11 more)
demos/render_blend_mode/: CMakeLists.txt
demos/render_graphics/: CMakeLists.txt
demos/render_graphics_object/: CMakeLists.txt
demos/render_shape/: CMakeLists.txt
demos/render_target/: CMakeLists.txt
demos/render_text/: CMakeLists.txt
demos/renderer/: CMakeLists.txt
demos/rendering/: CMakeLists.txt
demos/resolution/: CMakeLists.txt
demos/rotate_effect/: CMakeLists.txt
demos/sandbox/: CMakeLists.txt
demos/scale_effect/: CMakeLists.txt
demos/scene/: CMakeLists.txt
demos/scene_deserialization/: CMakeLists.txt
demos/scene_template/: CMakeLists.txt
demos/scene_transition/: CMakeLists.txt
demos/script/: CMakeLists.txt
demos/script_sequence/: CMakeLists.txt
demos/serialization_binary/: CMakeLists.txt
demos/serialization_json/: CMakeLists.txt
demos/serialization_scene/: CMakeLists.txt
demos/shake_effect/: CMakeLists.txt
demos/state/: CMakeLists.txt
demos/static_collision/: CMakeLists.txt
demos/template-demo/: CMakeLists.txt
demos/template_demo/: CMakeLists.txt
demos/tests/: common.h  test_math.h  test_matrix4.h  test_renderer.h
demos/text/: CMakeLists.txt
demos/texture_format/: CMakeLists.txt
demos/tint_effect/: CMakeLists.txt
demos/top_down_movement/: CMakeLists.txt
demos/tower_defense/: CMakeLists.txt
demos/translate_effect/: CMakeLists.txt
demos/tween/: CMakeLists.txt
demos/tween_bounce/: CMakeLists.txt
demos/tween_fade/: CMakeLists.txt
demos/tween_scale/: CMakeLists.txt
demos/tweens/: CMakeLists.txt
demos/ui/: CMakeLists.txt
demos/ui_button/: CMakeLists.txt
demos/ui_button_group/: CMakeLists.txt
demos/ui_dialogue/: CMakeLists.txt
demos/ui_dropdown/: CMakeLists.txt
demos/ui_plot/: CMakeLists.txt
demos/ui_tooltip/: CMakeLists.txt
demos/vector/: CMakeLists.txt
demos/world/: CMakeLists.txt
protegon/: CMakeLists.txt  protegon.vcxproj  protegon.vcxproj.filters
protegon/Debug/: protegon.idb
protegon/src/: Engine.cpp  Engine.h  Protegon.h  Protegon_old.h  Test.h  protegon.h
test_app/: CMakeLists.txt  test_app.vcxproj
test_app/src/: Application.cpp
tests/protegon/: CMakeLists.txt
(+2322 files in other folders)
