add_subdirectory(basic_rectangle)
add_subdirectory(binary_serialization)
add_subdirectory(paint)
add_subdirectory(sandbox)
add_subdirectory(plot)
add_subdirectory(renderer)
add_subdirectory(dropdown)
add_subdirectory(audio)
add_subdirectory(camera_shake)
add_subdirectory(button)
add_subdirectory(button_group)
add_subdirectory(animation)
add_subdirectory(platforming)
add_subdirectory(particle)
add_subdirectory(pathfinding)
add_subdirectory(text)
add_subdirectory(fluid)
add_subdirectory(scene_transition)
add_subdirectory(fullscreen)
add_subdirectory(camera)
add_subdirectory(parallax)
add_subdirectory(collision)
add_subdirectory(event)
add_subdirectory(light)
add_subdirectory(noise)
add_subdirectory(tween)
add_subdirectory(blend_mode)
add_subdirectory(resolution)
add_subdirectory(top_down_movement)
add_subdirectory(interactive)