add_subdirectory(effect_translate)
add_subdirectory(effect_rotate)
add_subdirectory(effect_scale)
add_subdirectory(effect_tint)
add_subdirectory(effect_fade)
add_subdirectory(effect_bounce)
add_subdirectory(effect_shake)
add_subdirectory(effect_follow)

add_subdirectory(camera)
add_subdirectory(camera_shake)

# add_subdirectory(camera_translate)
# add_subdirectory(camera_zoom)
# add_subdirectory(camera_rotate)
# add_subdirectory(camera_follow)
# add_subdirectory(camera_fade)
add_subdirectory(ui_dropdown)
add_subdirectory(ui_button)
add_subdirectory(ui_button_group)
add_subdirectory(plot)

add_subdirectory(serialization_binary)
add_subdirectory(serialization_json)
add_subdirectory(serialization_scene)

add_subdirectory(animation)
add_subdirectory(graphics_object)
add_subdirectory(renderer)
add_subdirectory(light)
add_subdirectory(blend_mode)
add_subdirectory(texture_format)
add_subdirectory(text)

add_subdirectory(sandbox)
add_subdirectory(paint)

add_subdirectory(chunk)
add_subdirectory(noise)
add_subdirectory(pathfinding)
add_subdirectory(particle)
add_subdirectory(fluid)

add_subdirectory(scene_transition)

add_subdirectory(audio)
add_subdirectory(fullscreen)
add_subdirectory(resolution)
add_subdirectory(script)
add_subdirectory(tween)

add_subdirectory(parallax)
add_subdirectory(platforming)
add_subdirectory(top_down_movement)

add_subdirectory(event)
add_subdirectory(interactive)
add_subdirectory(collision)
add_subdirectory(broadphase)