
add_subdirectory(tween)
add_subdirectory(tween_translate)
add_subdirectory(tween_rotate)
add_subdirectory(tween_scale)
add_subdirectory(tween_tint)
add_subdirectory(tween_fade)
add_subdirectory(tween_bounce)
add_subdirectory(tween_shake)
add_subdirectory(tween_follow)

add_subdirectory(camera)
add_subdirectory(camera_shake)

# add_subdirectory(camera_translate)
# add_subdirectory(camera_zoom)
# add_subdirectory(camera_rotate)
# add_subdirectory(camera_follow)
# add_subdirectory(camera_fade)

add_subdirectory(ui_dialogue)
add_subdirectory(ui_dropdown)
add_subdirectory(ui_button)
add_subdirectory(ui_button_group)
add_subdirectory(ui_plot)

add_subdirectory(serialization_binary)
add_subdirectory(serialization_json)
add_subdirectory(serialization_scene)
add_subdirectory(serialization_script)

add_subdirectory(render_animation)
add_subdirectory(render_target)
add_subdirectory(render_light)
add_subdirectory(render_blend_mode)
add_subdirectory(render_image_formats)
add_subdirectory(render_graphics_object)
add_subdirectory(render_text)
add_subdirectory(render_particle)
add_subdirectory(render_parallax)
add_subdirectory(renderer)

add_subdirectory(procedural_chunk)
add_subdirectory(procedural_noise)

add_subdirectory(physics_fluid)
add_subdirectory(physics_collision)
add_subdirectory(physics_broadphase)
add_subdirectory(physics_bounds)

add_subdirectory(resolution)
add_subdirectory(resolution_mode)
add_subdirectory(resolution_text)

add_subdirectory(script)
add_subdirectory(script_sequence)

add_subdirectory(player_platforming)
add_subdirectory(player_top_down)

add_subdirectory(sandbox)

add_subdirectory(paint)
add_subdirectory(scene_transition)
add_subdirectory(audio)
add_subdirectory(pathfinding)
add_subdirectory(component_hooks)
add_subdirectory(interactive)