add_subdirectory(render_shape)
add_subdirectory(render_animation)
add_subdirectory(render_target)
add_subdirectory(render_light)
add_subdirectory(render_shadows)
add_subdirectory(render_blend_mode)
add_subdirectory(render_image_formats)
add_subdirectory(render_graphics)
add_subdirectory(render_text)
add_subdirectory(render_particle)
add_subdirectory(render_parallax)
add_subdirectory(render_basics)