add_subdirectory(camera)
add_subdirectory(camera_shake)
add_subdirectory(procedural_chunk)
add_subdirectory(procedural_noise)
add_subdirectory(resolution)
add_subdirectory(resolution_mode)
add_subdirectory(resolution_text)
add_subdirectory(scene)
add_subdirectory(scene_transition)
add_subdirectory(scene_template)
add_subdirectory(pathfinding)